--- a/it/templates/main/blog.html
+++ b/it/templates/main/blog.html
@@ -5,11 +5,11 @@
 
 
     <!-- BANNER SECTION START -->
-    <section class="service-banner sub-banner-section w-100 float-left d-flex align-items-center">
+    {% comment %} <section class="service-banner sub-banner-section w-100 float-left d-flex align-items-center">
         <div class="container">
             <div class="sub-banner-inner-con text-center">
                 <h1 data-aos="fade-up" data-aos-duration="700">Блог</h1>
-                <p data-aos="fade-up" data-aos-duration="700">Посетите наш блог, чтобы узнать последние новости, советы и исследования в области психологии и психотерапии.</p>
+                <p data-aos="fade-up" data-aos-duration="700">Посетите наш блог, чтобы узнать последние новости и советы.</p>
                 <nav aria-label="breadcrumb" data-aos="fade-up" data-aos-duration="700">
                     <ol class="breadcrumb d-inline-block mb-0">
                         <li class="breadcrumb-item d-inline-block"><a href="index.html">Главная</a></li>
@@ -18,7 +18,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
     <!-- BANNER SECTION END -->
     <!-- MAIN SECTION -->
     <div class="blog-posts blogpage-section">
