create page blog detail

--- a/it/templates/main/blog.html
+++ b/it/templates/main/blog.html
@@ -45,134 +45,13 @@
                                     <span class="mb-0 text-size-14">{{ post.publish }}</span>
                                 </div>
                                 <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
+                                    <a class="mb-0 read_more text-decoration-none" href="{% url 'main:blog_detail' slug=post.slug %}">
                                         Подробнее</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     {% endfor %}
-
-                    {% comment %} <div class="blog-box onecolumn-blog float-left w-100 post-item mb-4">
-                        <div class="post-item-wrap position-relative">
-                            <div class="post-image">
-                                <a href="single-blog.html"><img alt="" src="assets/images/post-featured.jpg"></a>
-                            </div>
-                            <div class="lower-portion">
-                                <i class="fa-solid fa-user"></i>
-                                <span class="text-size-14 text-mr">Автор: Алексей</span>
-                                <i class="tag-mb fa-solid fa-tag"></i>
-                                <span class="text-size-14">Название: Психотерапия</span>
-                                <p class="mb-0 text-size-16">Статья о психотерапии предлагает глубокий взгляд на эффективные методы и стратегии помощи людям в борьбе с эмоциональными и психологическими проблемами. Она рассматривает как классические, так и современные подходы, направленные на личностное развитие и улучшение качества жизни.</p>
-                            </div>
-                            <div class="button-portion loadone_twocol">
-                                <div class="date">
-                                    <i class="mb-0 calendar-ml fa-solid fa-calendar-days"></i>
-                                    <span class="mb-0 text-size-14">Dec 20,2022</span>
-                                </div>
-                                <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
-                                        Подробнее</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-box onecolumn-blog float-left w-100 post-item mb-4">
-                        <div class="post-item-wrap position-relative">
-                            <div class="post-image">
-                                <a href="single-blog.html"><img alt="" src="assets/images/post-featured.jpg"></a>
-                            </div>
-                            <div class="lower-portion">
-                                <i class="fa-solid fa-user"></i>
-                                <span class="text-size-14 text-mr">Автор: Алексей</span>
-                                <i class="tag-mb fa-solid fa-tag"></i>
-                                <span class="text-size-14">Название: Психотерапия</span>
-                                <p class="mb-0 text-size-16">Статья о психотерапии предлагает глубокий взгляд на эффективные методы и стратегии помощи людям в борьбе с эмоциональными и психологическими проблемами. Она рассматривает как классические, так и современные подходы, направленные на личностное развитие и улучшение качества жизни.</p>
-                            </div>
-                            <div class="button-portion loadone_twocol">
-                                <div class="date">
-                                    <i class="mb-0 calendar-ml fa-solid fa-calendar-days"></i>
-                                    <span class="mb-0 text-size-14">Dec 20,2022</span>
-                                </div>
-                                <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
-                                        Подробнее</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-box onecolumn-blog float-left w-100 post-item mb-4">
-                        <div class="post-item-wrap position-relative">
-                            <div class="post-image">
-                                <a href="single-blog.html"><img alt="" src="assets/images/post-featured.jpg"></a>
-                            </div>
-                            <div class="lower-portion">
-                                <i class="fa-solid fa-user"></i>
-                                <span class="text-size-14 text-mr">Автор: Алексей</span>
-                                <i class="tag-mb fa-solid fa-tag"></i>
-                                <span class="text-size-14">Название: Психотерапия</span>
-                                <p class="mb-0 text-size-16">Статья о психотерапии предлагает глубокий взгляд на эффективные методы и стратегии помощи людям в борьбе с эмоциональными и психологическими проблемами. Она рассматривает как классические, так и современные подходы, направленные на личностное развитие и улучшение качества жизни.</p>
-                            </div>
-                            <div class="button-portion loadone_twocol">
-                                <div class="date">
-                                    <i class="mb-0 calendar-ml fa-solid fa-calendar-days"></i>
-                                    <span class="mb-0 text-size-14">Dec 20,2022</span>
-                                </div>
-                                <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
-                                        Подробнее</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-box onecolumn-blog float-left w-100 post-item mb-4">
-                        <div class="post-item-wrap position-relative">
-                            <div class="post-image">
-                                <a href="single-blog.html"><img alt="" src="assets/images/post-featured.jpg"></a>
-                            </div>
-                            <div class="lower-portion">
-                                <i class="fa-solid fa-user"></i>
-                                <span class="text-size-14 text-mr">Автор: Алексей</span>
-                                <i class="tag-mb fa-solid fa-tag"></i>
-                                <span class="text-size-14">Название: Психотерапия</span>
-                                <p class="mb-0 text-size-16">Статья о психотерапии предлагает глубокий взгляд на эффективные методы и стратегии помощи людям в борьбе с эмоциональными и психологическими проблемами. Она рассматривает как классические, так и современные подходы, направленные на личностное развитие и улучшение качества жизни.</p>
-                            </div>
-                            <div class="button-portion loadone_twocol">
-                                <div class="date">
-                                    <i class="mb-0 calendar-ml fa-solid fa-calendar-days"></i>
-                                    <span class="mb-0 text-size-14">Dec 20,2022</span>
-                                </div>
-                                <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
-                                        Подробнее</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-box onecolumn-blog float-left w-100 post-item mb-4">
-                        <div class="post-item-wrap position-relative">
-                            <div class="post-image">
-                                <a href="single-blog.html"><img alt="" src="assets/images/post-featured.jpg"></a>
-                            </div>
-                            <div class="lower-portion">
-                                <i class="fa-solid fa-user"></i>
-                                <span class="text-size-14 text-mr">Автор: Алексей</span>
-                                <i class="tag-mb fa-solid fa-tag"></i>
-                                <span class="text-size-14">Название: Психотерапия</span>
-                                <p class="mb-0 text-size-16">Статья о психотерапии предлагает глубокий взгляд на эффективные методы и стратегии помощи людям в борьбе с эмоциональными и психологическими проблемами. Она рассматривает как классические, так и современные подходы, направленные на личностное развитие и улучшение качества жизни.</p>
-                            </div>
-                            <div class="button-portion loadone_twocol">
-                                <div class="date">
-                                    <i class="mb-0 calendar-ml fa-solid fa-calendar-days"></i>
-                                    <span class="mb-0 text-size-14">Dec 20,2022</span>
-                                </div>
-                                <div class="button">
-                                    <a class="mb-0 read_more text-decoration-none" href="./single-blog.html">
-                                        Подробнее</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div> {% endcomment %}
 
                 </div>
             </div>
