--- a/it/static/assets/css/custom.css
+++ b/it/static/assets/css/custom.css
@@ -1543,7 +1543,7 @@ h5 {
 /* footer section style end */
 .footer-main-section {
     background: #6aced7;
-    border-bottom: 1px solid #388277;
+    border-bottom: 1px solid rgb(71, 147, 136);
 }
 
 .footer-logo-con .social-links ul li {
