--- a/it/static/assets/css/custom-style.css
+++ b/it/static/assets/css/custom-style.css
@@ -439,7 +439,7 @@ a.item-link{margin-top: 10px; display: inline-block}
 .blogpage-section {
     position: relative;
     padding: 130px 0 200px;
-    background: #f7f9ff;
+    background: #ececec;
 	width: 100%;
 	float: left;
 }
