full create placeholders in page blog detail

--- a/it/templates/base.html
+++ b/it/templates/base.html
@@ -88,7 +88,7 @@
                             <a class="nav-link p-0 custom-black" href="services.html">Услуги</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-0 custom-black" href="one-column.html">Блог</a>
+                            <a class="nav-link p-0 custom-black" href="{% url "main:blog" %}">Блог</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle p-0" href="#" id="navbarDropdown5" role="button"
